# review-lens

./: .env.example  .gitignore  README.md  docker-compose.yml  init.sh  test_scrapers.py
backend/: Dockerfile  bestbuy_search.html  config.py  graph.py  models.py  pyproject.toml  test_bestbuy.py
backend/agents/: synthesis_agent.py
backend/analysis/: absa.py  clusterer.py  drift_detector.py  fake_detector.py
backend/api/: main.py
backend/cache/: redis_manager.py
backend/db/: database.py
backend/scrapers/: amazon.py  bestbuy.py  google.py  reddit.py  youtube.py
backend/simulated_data/: generate.py  loader.py
backend/simulated_data/items/: apple_airpods_pro_2nd_gen.json  bose_quietcomfort_earbuds_ii.json  breville_barista_express.json  dyson_v15_vacuum_cleaner.json  garmin_forerunner_265.json  google_pixel_8_pro.json  gopro_hero12_black.json  instant_pot_duo_7_in_1.json  kindle_paperwhite_11th_gen.json  lg_c3_oled_tv.json  logitech_mx_master_3s.json  macbook_air_m3.json  nespresso_vertuoplus.json  ninja_air_fryer_max_xl.json  oura_ring_gen3.json  playstation_5_console.json  roomba_i3+_evo.json  samsung_galaxy_s24_ultra.json  sony_wh_1000xm5_headphones.json  steam_deck_oled.json
db/: schema.sql
frontend/: Dockerfile  next.config.mjs  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: FeaturedReviews.tsx  ProgressStream.tsx  RadarChart.tsx  RatingDistribution.tsx  ScoreCard.tsx  ThemeClusters.tsx  (+2 more)
scraper_debug/: amazon_product.html  amazon_reviews.html  amazon_search.html  bestbuy_search.html  bestbuy_with_cookies.html
(+2 files in other folders)
