[project]
name = "reviewlens"
version = "0.1.0"
description = "AI-powered consumer product review intelligence engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "langgraph>=0.2.0",
    "langchain-ollama>=0.2.0",
    "langchain-core>=0.3.0",
    "playwright>=1.48.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.32.0",
    "praw>=7.8.0",
    "asyncpg>=0.30.0",
    "redis[hiredis]>=5.2.0",
    "sentence-transformers>=3.3.0",
    "scikit-learn>=1.5.0",
    "ruptures>=1.1.9",
    "umap-learn>=0.5.7",
    "hdbscan>=0.8.40",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "aiohttp>=3.11.0",
    "lxml>=5.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
